--- a/index.html
+++ b/index.html
@@ -4,11 +4,88 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Политика конфиденциальности Balder Schedule</title>
+	<style>
+		body {
+			font-family: Arial, sans-serif;
+			line-height: 1.6;
+			max-width: 800px;
+			margin: 0 auto;
+			padding: 20px;
+			color: #333;
+		}
+
+		h1 {
+			color: #2c3e50;
+			text-align: center;
+			border-bottom: 2px solid #eee;
+			padding-bottom: 10px;
+		}
+
+		h2 {
+			color: #3498db;
+			margin-top: 25px;
+		}
+
+		.last-updated {
+			text-align: right;
+			font-style: italic;
+			color: #7f8c8d;
+			margin-bottom: 30px;
+		}
+
+		.contact {
+			background-color: #f8f9fa;
+			padding: 15px;
+			border-left: 4px solid #3498db;
+			margin-top: 20px;
+		}
+	</style>
 </head>
 
 <body>
+	<h1>Политика конфиденциальности Balder Schedule</h1>
+	<div class="last-updated">Последнее обновление: 22.06.2025</div>
 
+	<h2>1. Какие данные мы собираем</h2>
+	<p>Приложение <strong>Balder Schedule</strong> собирает <strong>IMEI (идентификатор устройства)</strong>
+		исключительно для <strong>персонализации работы сервиса</strong>.</p>
+
+	<h2>2. Как мы используем эти данные</h2>
+	<ul>
+		<li>IMEI используется для обеспечения корректной работы функций приложения.</li>
+		<li>Данные хранятся на наших серверах и не передаются третьим лицам.</li>
+	</ul>
+
+	<h2>3. Хранение и защита данных</h2>
+	<ul>
+		<li>IMEI хранится в зашифрованном виде.</li>
+		<li>Мы принимаем меры для защиты данных от несанкционированного доступа.</li>
+	</ul>
+
+	<h2>4. Передача данных третьим лицам</h2>
+	<p><strong>Balder Schedule</strong> не передаёт IMEI или другие данные:</p>
+	<ul>
+		<li>рекламным сетям,</li>
+		<li>аналитическим сервисам (Google Analytics, Firebase и т. д.),</li>
+		<li>государственным органам (кроме случаев, предусмотренных законодательством РФ).</li>
+	</ul>
+
+	<h2>5. Права пользователей</h2>
+	<p>Вы можете:</p>
+	<ul>
+		<li><strong>Отозвать согласие</strong> на обработку IMEI, обратившись в поддержку.</li>
+		<li><strong>Удалить свои данные</strong> — мы полностью удалим IMEI из нашей системы по вашему запросу.</li>
+	</ul>
+
+	<h2>6. Изменения в политике</h2>
+	<p>Мы оставляем за собой право обновлять эту политику. Актуальная версия всегда будет доступна в приложении.</p>
+
+	<div class="contact">
+		<h2>7. Контакты</h2>
+		<p>По вопросам конфиденциальности обращайтесь:</p>
+		<p>📧 <strong>Email:</strong> <a href="mailto:balder.schedule@yandex.ru">balder.schedule@yandex.ru</a></p>
+	</div>
 </body>
 
 </html>
