--- a/index.html
+++ b/index.html
@@ -45,37 +45,40 @@
 
 <body>
 	<h1>Политика конфиденциальности Balder Schedule</h1>
-	<div class="last-updated">Последнее обновление: 22.06.2025</div>
+	<p><strong>Разработчик:</strong> Evgeniy Marinin</p>
+	<div class="last-updated">Последнее обновление: 07.07.2025</div>
 
-	<h2>1. Какие данные мы собираем</h2>
-	<p>Приложение <strong>Balder Schedule</strong> собирает <strong>IMEI (идентификатор устройства)</strong>
-		исключительно для <strong>персонализации работы сервиса</strong>.</p>
+	<h2>1. Сбор данных</h2>
+	<p>Приложение <strong>Balder Schedule</strong> <strong>не собирает персональные данные пользователей</strong>. В
+		будущей версии может быть реализована функция обмена файлами между устройствами с использованием анонимного
+		идентификатора.</p>
 
-	<h2>2. Как мы используем эти данные</h2>
+	<h2>2. Использование данных</h2>
 	<ul>
-		<li>IMEI используется для обеспечения корректной работы функций приложения.</li>
-		<li>Данные хранятся на наших серверах и не передаются третьим лицам.</li>
+		<li>Приложение работает локально на устройстве пользователя без передачи данных на сервер.</li>
+		<li>Любые файлы, загружаемые пользователями в будущем, будут храниться ограниченное время и автоматически
+			удаляться после скачивания.</li>
 	</ul>
 
-	<h2>3. Хранение и защита данных</h2>
+	<h2>3. Хранение и защита</h2>
 	<ul>
-		<li>IMEI хранится в зашифрованном виде.</li>
-		<li>Мы принимаем меры для защиты данных от несанкционированного доступа.</li>
+		<li>Все данные (расписания, настройки) хранятся только на устройстве пользователя.</li>
+		<li>Приложение не требует регистрации или ввода персональной информации.</li>
 	</ul>
 
 	<h2>4. Передача данных третьим лицам</h2>
-	<p><strong>Balder Schedule</strong> не передаёт IMEI или другие данные:</p>
+	<p><strong>Balder Schedule</strong> не передаёт данные:</p>
 	<ul>
 		<li>рекламным сетям,</li>
-		<li>аналитическим сервисам (Google Analytics, Firebase и т. д.),</li>
+		<li>аналитическим сервисам,</li>
 		<li>государственным органам (кроме случаев, предусмотренных законодательством РФ).</li>
 	</ul>
 
 	<h2>5. Права пользователей</h2>
 	<p>Вы можете:</p>
 	<ul>
-		<li><strong>Отозвать согласие</strong> на обработку IMEI, обратившись в поддержку.</li>
-		<li><strong>Удалить свои данные</strong> — мы полностью удалим IMEI из нашей системы по вашему запросу.</li>
+		<li><strong>Удалить все данные</strong> — достаточно удалить приложение с устройства.</li>
+		<li><strong>Обратиться в поддержку</strong> для уточнения работы функций.</li>
 	</ul>
 
 	<h2>6. Изменения в политике</h2>
