--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
 	<div class="last-updated">Последнее обновление: 07.07.2025</div>
 
 	<h2>1. Сбор данных</h2>
-	<p>Приложение <strong>Balder Schedule</strong> <strong>не собирает персональные данные пользователей</strong>. В
-		будущей версии может быть реализована функция обмена файлами между устройствами с использованием анонимного
-		идентификатора.</p>
+	<p>Приложение <strong>Balder Schedule</strong> <strong>не собирает персональные данные пользователей</strong>. Все
+		данные, такие как расписания и настройки, обрабатываются локально на устройстве. В будущей версии может быть
+		реализована функция обмена файлами между устройствами с использованием анонимного идентификатора. Эти
+		идентификаторы не связаны с персональной информацией и будут использоваться исключительно для обеспечения обмена
+		файлами. Данные будут передаваться с использованием шифрования, и их хранение будет ограничено по времени.</p>
 
 	<h2>2. Использование данных</h2>
 	<ul>
@@ -78,7 +80,11 @@
 	<p>Вы можете:</p>
 	<ul>
 		<li><strong>Удалить все данные</strong> — достаточно удалить приложение с устройства.</li>
+		<li><strong>Запросить информацию</strong> — вы можете обратиться в поддержку, чтобы подтвердить, что приложение
+			не собирает ваши данные.</li>
 		<li><strong>Обратиться в поддержку</strong> для уточнения работы функций.</li>
+		<li>Если вы находитесь в Европейском Союзе, вы имеете право подать жалобу в надзорный орган по защите данных.
+		</li>
 	</ul>
 
 	<h2>6. Изменения в политике</h2>
